# com-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  index.html  search-index.js
com_rs/: index.html  macro.com_interface!.html  macro.iid!.html  sidebar-items.js  struct.ComPtr.html  struct.IID.html  struct.IUnknown.html  trait.AsComPtr.html  trait.ComInterface.html  type.HResult.html
com_rs/comptr/: sidebar-items.js  struct.ComPtr.html  trait.AsComPtr.html  trait.ComInterface.html
com_rs/unknown/: sidebar-items.js  struct.IUnknown.html
implementors/com_rs/: trait.AsComPtr.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Deref.js  trait.Drop.js
src/: comptr.rs  lib.rs  macros.rs  unknown.rs
src/com_rs/: comptr.rs.html  lib.rs.html  macros.rs.html  unknown.rs.html
tests/: test_as_ptr.rs
